Consistent spelling of licence
The OED claims that licence is an acceptable varient spelling for the
verb so I'm just going to consistently use that instead of switching
between licence and license for noun and verb.

--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -38,7 +38,7 @@
     - role: fake-gmond
       tags: fake-gmond
       when: want_fake_metrics | bool
-    - role: license-limits
-      tags: license-limits
+    - role: licence-limits
+      tags: licence-limits
     - role: finalization
       tags: finalization
