--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -60,6 +60,9 @@
 - name: Create default users
   import_tasks: create_default_users.yml
 
+- name: Add licence limits
+  import_tasks: licence_limits.yml
+
 - name: Precompile assets
   import_tasks: run_rake_task.yml
   vars:
