--- a/ansible/roles/appliance-dev/tasks/main.yml
+++ b/ansible/roles/appliance-dev/tasks/main.yml
@@ -26,3 +26,6 @@
 
 - name: Setup dev ct-visualisation-app
   include_tasks: setup_dev_ct_vis_app.yml
+
+- name: Setup dev metric daemons
+  include_tasks: setup_dev_metric_daemon.yml
