--- a/ansible/roles/metric-reporting/tasks/main.yml
+++ b/ansible/roles/metric-reporting/tasks/main.yml
@@ -46,8 +46,8 @@
     dest: "/etc/logrotate.d/{{item}}"
   loop: "{{ daemons }}"
 
-- name: Additional metric reporting daemon configuration
-  include_tasks: metric_reporting_daemon_config.yml
+- name: Generate shared secret
+  include_tasks: generate_shared_secret.yml
 
 - name: Ensure that daemons are enabled
   ansible.builtin.service:
