--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -13,6 +13,29 @@
           - aws_secret_access_key
       include_tasks: tasks/assert_credentials_and_release_tag.yml
 
+    - name: Make installation directories
+      ansible.builtin.file:
+        path: "{{ item.path }}"
+        owner: "{{ item.owner }}"
+        group: "{{ item.group }}"
+        mode: "{{ item.mode }}"
+        state: directory
+      loop:
+        - path: "{{ct_root_dir}}"
+          owner: root
+          group: root
+          mode: "755"
+
+        - path: "{{ct_etc_dir}}"
+          owner: root
+          group: root
+          mode: "755"
+
+        - path: "{{ct_installation_dir}}"
+          owner: "{{app_user}}"
+          group: "{{app_user}}"
+          mode: "755"
+
   roles:
     - role: misc_packages
       tags: misc_packages
@@ -26,8 +49,6 @@
       tags: ganglia
     - role: monit
       tags: monit
-    - role: data_dirs
-      tags: data_dirs
     - role: metric-reporting
       tags: metric-reporting
     - role: ct-visualisation-app
