--- a/ansible/package-assets-playbook.yml
+++ b/ansible/package-assets-playbook.yml
@@ -2,12 +2,9 @@
 - name: |
     Playbook to build, package and upload assets required by Alces Concertim.
 
-    Alces Concertim has a number of assets that need to be built on a machine
-    similar to the Concertim machine itself.  Such as `ruby` versions `1.8` and
-    `1.9` and some C++ Ruby extensions, aka "number crunchers".  Also the
-    daemons, modules and appliances need packaging.
-
-    This playbook builds them, packages them and uploads them to S3.
+    Alces Concertim has a number of assets that are to be built on a machine
+    similar to the Concertim machine itself. This playbook builds them,
+    packages them and uploads them to S3.
   hosts: localhost
   become: true
   become_user: root
@@ -19,6 +16,15 @@
     package_assets_repo_dir: /tmp/concertim/package-assets/repos
     remove_prior_builds: true
     dryrun: true
+
+  pre_tasks:
+    - name: Check credentials and release tag
+      vars:
+        credentials:
+          - gh_token
+          - aws_access_key_id
+          - aws_secret_access_key
+      include_tasks: tasks/assert_credentials_and_release_tag.yml
+
   roles:
-    - role: package-base
     - role: package-assets
