--- a/ansible/tasks/run_rails_runner.yml
+++ b/ansible/tasks/run_rails_runner.yml
@@ -2,6 +2,6 @@
   ansible.builtin.shell:
     cmd: |
       PATH={{ruby_bin_dir}}:$PATH
-      sudo -u {{app_user}} --preserve-env=PATH,RAILS_ENV /bin/bash -c 'RAILS_ENV={{ rails_env }} {{additional_env}} {{rails_runner}} {{runner_args}}'
+      sudo -u {{user | default(app_user, true)}} --preserve-env=PATH,RAILS_ENV /bin/bash -c 'RAILS_ENV={{ rails_env }} {{additional_env}} {{rails_runner}} {{runner_args}}'
     chdir: "{{chdir}}"
 
