Update setting passwords for default users

--- a/ansible/roles/ct-visualisation-app/templates/default-user-data.yml
+++ b/ansible/roles/ct-visualisation-app/templates/default-user-data.yml
@@ -1,4 +1,9 @@
-admin_password: "{{admin_password}}"
-admin_email: "{{admin_email}}"
-operator_password: "{{operator_password}}"
-operator_email: "{{operator_email}}"
+admin:
+  password: "{{default_users.admin.password}}"
+  email: "{{default_users.admin.email}}"
+operator_one:
+  password: "{{default_users.operator_one.password}}"
+  email: "{{default_users.operator_one.email}}"
+operator_two:
+  password: "{{default_users.operator_two.password}}"
+  email: "{{default_users.operator_two.email}}"
