--- a/ansible/roles/database/tasks/main.yml
+++ b/ansible/roles/database/tasks/main.yml
@@ -1,4 +1,6 @@
 - name: Install postgresql
+  register: result
+  until: result is success
   ansible.builtin.apt:
     name: postgresql
     state: present
