--- a/ansible/roles/package-assets/tasks/main.yml
+++ b/ansible/roles/package-assets/tasks/main.yml
@@ -1,4 +1,6 @@
 - name: Install required packages
+  register: result
+  until: result is success
   ansible.builtin.apt:
     name: 
       - awscli
