--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -1,4 +1,6 @@
 - name: Install nginx and dependencies
+  register: result
+  until: result is success
   ansible.builtin.apt:
     name:
       - ssl-cert
