--- a/ansible/roles/ganglia/tasks/main.yml
+++ b/ansible/roles/ganglia/tasks/main.yml
@@ -1,11 +1,12 @@
 - name: Ensure ganglia is at the latest version
+  register: result
+  until: result is success
   ansible.builtin.apt:
-    name: "{{ item }}"
+    name:
+      - ganglia-monitor
+      - gmetad
+      - rrdtool
     state: latest
-  loop:
-    - ganglia-monitor
-    - gmetad
-    - rrdtool
 
 - name: Install gmond configuration
   ansible.builtin.copy:
