--- a/ansible/roles/memcached/tasks/main.yml
+++ b/ansible/roles/memcached/tasks/main.yml
@@ -1,4 +1,6 @@
 - name: Ensure memcached is at the latest version
+  register: result
+  until: result is success
   ansible.builtin.apt:
     name: memcached
     state: latest
