First pass at a docker build
There is `docker-compose.yml` file describing two services: `concertim`
and `db`.  `db` contains a postgresql server and `concertim` contains
everything else.  The `db` service is built from the official postgresql
image.  The `concertim` image is built from a `Dockerfile`. Building the
docker images is complicated/non-standard a `build-docker.sh` script has
been added to manage this.

The ansible playbook made some assumptions that do not work with docker.

1. It is possible to install services and start them via `systemctl`
   during the playbook.
2. The database (and other services) would be running on `localhost`.
2. It is possible to migrate databases and create/update data during the
   playbook.

To that end the ansible playbook/roles have seen some changes.

1. Creating the database user has been moved out of the database role
   and into the ct-visualisation-app role.  This is probably a better
   location for it.
2. Two new ansible variables and an ansible tag have been added allowing
   the playbook to be split into "build" and "post build" tasks.  When
   running `docker-compose build` only the "build" tasks are ran.
   Afterwards, the "post build" tasks are ran via `docker-compose run`.

There are a few issues with the current implementation:

1. The splitting of tasks could be done in a much nicer way.
2. The systemd service files for `ct-visualisation-app` and
   `ct-metric-*-daemon` are not correctly installed.
3. The `concertim` docker image is far too large.
4. The `concertim` docker image uses `systemd` to launch all of its
   processes which requires it to be ran in `--privileged` mode.
5. There are issues with the database not having a `postgres` role.

--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -5,6 +5,10 @@
   become_user: root
   become_method: sudo
 
+  vars:
+    docker_build: false
+    docker_postbuild: false
+
   pre_tasks:
     - name: Check credentials and release tag
       vars:
@@ -43,6 +47,7 @@
       tags: webserver
     - role: database
       tags: database
+      when: not docker_build | bool
     - role: memcached
       tags: memcached
     - role: ganglia
@@ -61,3 +66,4 @@
       when: want_fake_metrics | bool
     - role: finalization
       tags: finalization
+      when: not docker_build | bool
