--- a/ansible/roles/ct-visualisation-app/tasks/setup_database.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/setup_database.yml
@@ -1,3 +1,16 @@
+- name: Configure database user
+  when: not docker_postbuild | bool
+  block:
+    - name: Check if {{ app_user }} role exists
+      ansible.builtin.command:
+        cmd: sudo -u postgres psql postgres -tAc "SELECT 1 FROM pg_roles WHERE rolname='{{ app_user }}'"
+      register: db_user_exist
+
+    - name: Create {{ app_user }} role
+      when: db_user_exist.stdout == ""
+      ansible.builtin.command:
+        cmd: sudo -u postgres createuser {{ app_user }} -S -R -d
+
 - name: Create database
   vars:
     task: db:create
@@ -7,6 +20,7 @@
     chdir: "{{ct_vis_app_core_dir}}"
 
 - name: Add SUPERUSER role to {{app_user}}
+  when: not docker_postbuild | bool
   vars:
     dbname: ct-vis
     dbsuperuser: postgres
@@ -22,6 +36,7 @@
     chdir: "{{ct_vis_app_core_dir}}"
 
 - name: Remove SUPERUSER role from {{app_user}}
+  when: not docker_postbuild | bool
   vars:
     dbname: ct-vis
     dbsuperuser: postgres
