Enable systemd units for our apps

--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -98,7 +98,7 @@
     - ct-visualisation-app
     - ct-visualisation-job-runner
 
-- name: Enable visualisation app
+- name: Enable visualisation app (non-docker)
   ansible.builtin.service:
     name: "{{item}}"
     enabled: yes
@@ -107,3 +107,13 @@
     - ct-visualisation-app
     - ct-visualisation-job-runner
   when: not docker_build | bool
+
+- name: Enable visualisation app (docker)
+  ansible.builtin.file:
+    src: /lib/systemd/system/{{item}}.service
+    dest: /etc/systemd/system/multi-user.target.wants/{{item}}.service
+    state: link
+  loop:
+    - ct-visualisation-app
+    - ct-visualisation-job-runner
+  when: docker_build | bool
