--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,10 +10,10 @@ RUN apt-get update \
           postgresql-client-14 \
       && add-apt-repository --yes ppa:ansible/ansible \
       && apt-get install --yes --no-install-recommends \
-          ansible
-      # && apt-get clean \
-      # && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
-      # && rm -rf /var/lib/apt/lists/*
+          ansible \
+      && apt-get clean \
+      && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
+      && rm -rf /var/lib/apt/lists/*
 
 # Used for downloading our pre-packaged software from AWS.
 ARG AWS_ACCESS_KEY_ID
@@ -21,8 +21,22 @@ ARG AWS_SECRET_ACCESS_KEY
 
 ADD ./ansible/ /ansible
 
-RUN ansible-playbook \
-  --inventory /ansible/inventory.ini \
-  --extra-vars "aws_access_key_id=$AWS_ACCESS_KEY_ID aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
-  --extra-vars "docker_build=true" \
-  /ansible/build-playbook.yml
+RUN apt-get update && \
+    ansible-playbook \
+      --inventory /ansible/inventory.ini \
+      --extra-vars "aws_access_key_id=$AWS_ACCESS_KEY_ID aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
+      --extra-vars "docker_build=true" \
+      /ansible/build-playbook.yml
+    # /ansible/build-playbook.yml && \
+    # apt-get remove --yes \
+    #     ansible \
+    #     git \
+    #     gpg-agent \
+    #     software-properties-common && \
+    # apt-get autoremove --yes && \
+    # apt-get clean && \
+    # rm -Rf /usr/share/doc && rm -Rf /usr/share/man && \
+    # rm -rf /var/lib/apt/lists/*
+
+COPY ./docker/concertim-entrypoint.sh /docker-entrypoint.sh
+ENTRYPOINT ["/docker-entrypoint.sh"]
