Move nginx to its own container
* Ansible is still used to build the nginx configuration. A multi-stage
  Dockerfile is used to reduce the image size.
* nginx serves the rails assets via a shared volume.

--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -10,6 +10,7 @@
 
   pre_tasks:
     - name: Check credentials and release tag
+      tags: prep
       vars:
         credentials:
           - aws_access_key_id
@@ -17,6 +18,7 @@
       include_tasks: tasks/assert_credentials_and_release_tag.yml
 
     - name: Make installation directories
+      tags: prep
       ansible.builtin.file:
         path: "{{ item.path }}"
         owner: "{{ item.owner }}"
