--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -19,6 +19,8 @@
     dest: "/etc/{{ item }}"
   loop:
     - nginx/snippets/server-https.d/document-root.conf
+    - nginx/snippets/server-https.d/metric-reporting-daemon.conf
+    - nginx/snippets/server-https.d/zzz-ct-visualisation-app.conf
 
 - name: Disable default sites
   ansible.builtin.file:
