--- a/ansible/roles/webserver/templates/nginx/snippets/server-https.d/zzz-ct-visualisation-app.conf
+++ b/ansible/roles/webserver/templates/nginx/snippets/server-https.d/zzz-ct-visualisation-app.conf
@@ -3,7 +3,7 @@
 # handling needs to be defined before this.
 
 location ^~ / {
-  proxy_pass http://127.0.0.1:7000/;
+  proxy_pass http://{{visualisation_host}}:7000/;
   proxy_pass_request_headers on;
   include /etc/nginx/proxy_params;
 }
