--- a/ansible/roles/webserver/templates/nginx/snippets/server-https.d/metric-reporting-daemon.conf
+++ b/ansible/roles/webserver/templates/nginx/snippets/server-https.d/metric-reporting-daemon.conf
@@ -1,5 +1,5 @@
 location ^~ /mrd/ {
-  proxy_pass http://127.0.0.1:3000/;
+  proxy_pass http://{{metrics_host}}:3000/;
   proxy_pass_request_headers on;
   include /etc/nginx/proxy_params;
 }
