Metric processing daemons on own container
The three daemons involed in metric reporting and processing
(`ct-metric-reporting-daemon`, `ct-metric-processing-daemon`  and
`gmetad`) have their own container.

Ansible is still used to build the configurations.  A multi-stage
Dockerfile is used to reduce image size.

Support for configuring the memcache host has been added.

Currently, the JWT secret is shared via a volume.  Perhaps this should
be done via a docker secret instead.

Also, a better gmetad config has been created.  It more closely matches
the upstream config.

--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -38,6 +38,9 @@
     cd "{{ ct_vis_app_core_dir }}"
     ./bin/bundle install
 
+- name: Generate shared secret
+  include_tasks: generate_shared_secret.yml
+
 - name: Create new master key and credentials
   block:
     - name: Remove existing key and credentials
