--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -41,6 +41,14 @@
           group: "{{app_user}}"
           mode: "755"
 
+    - name: Install dependencies for ansible S3 tasks
+      tags: prep
+      register: result
+      until: result is success
+      ansible.builtin.apt:
+        name: python3-boto3
+        state: latest
+
   roles:
     - role: misc_packages
       tags: misc_packages
