--- a/ansible/roles/metric-reporting/tasks/main.yml
+++ b/ansible/roles/metric-reporting/tasks/main.yml
@@ -1,10 +1,21 @@
 # The daemons have libexec scripts which depend on Ruby.
-- name: Install dependencies
-  register: result
-  until: result is success
-  ansible.builtin.apt:
-    name:
-      - ruby3.0
+- name: Install libexec script dependencies
+  block:
+    - name: Install Ruby
+      register: result
+      until: result is success
+      ansible.builtin.apt:
+        name:
+          - ruby3.0
+
+    - name: Install gems
+      register: result
+      until: result is success
+      ansible.builtin.command:
+        cmd: gem install {{item}} --no-document
+      loop:
+        - dalli -v '~> 3.2.3'
+        - activesupport
 
 - name: Download daemon packages from S3
   amazon.aws.aws_s3:
@@ -40,14 +51,21 @@
     mode: "644"
   loop: "{{ daemons }}"
 
+- name: Adjust memcache host in config
+  ansible.builtin.replace:
+    path: "{{item}}"
+    regexp: '^(\s*)args: *\["localhost:11211"\]'
+    replace: '\1args: ["{{memcache_host}}:11211"]'
+  loop:
+    - "{{ct_installation_dir}}/ct-metric-reporting-daemon/config/config.yml"
+    - "{{ct_installation_dir}}/ct-metric-processing-daemon/config/config.yml"
+  when: docker_build | bool
+
 - name: Install {{item}} logrotate configuration
   ansible.builtin.copy:
     src: "{{item}}.logrotate"
     dest: "/etc/logrotate.d/{{item}}"
   loop: "{{ daemons }}"
-
-- name: Generate shared secret
-  include_tasks: generate_shared_secret.yml
 
 - name: Enable daemons (non-docker)
   ansible.builtin.service:
