Reduce docker image size for visualisation

--- a/docker/visualisation/Dockerfile
+++ b/docker/visualisation/Dockerfile
@@ -1,4 +1,6 @@
-FROM eniocarboni/docker-ubuntu-systemd:22.04
+################
+# Stage: builder
+FROM ubuntu:22.04 as builder
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
@@ -26,7 +28,7 @@ RUN apt-get update && \
       --inventory /ansible/inventory.ini \
       --extra-vars "aws_access_key_id=$AWS_ACCESS_KEY_ID aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" \
       --extra-vars "docker_build=true" \
-      --tags prep,misc_packages,memcached,ct-visualisation-app \
+      --tags prep,memcached,ct-visualisation-app \
       /ansible/build-playbook.yml && \
     apt-get remove --yes \
         ansible \
@@ -35,6 +37,55 @@ RUN apt-get update && \
     apt-get clean && \
     rm -Rf /usr/share/doc && rm -Rf /usr/share/man && \
     rm -rf /var/lib/apt/lists/*
+
+COPY ./docker/visualisation/entrypoint.sh /docker-entrypoint.sh
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
+################
+# Stage: final
+FROM ubuntu:22.04
+
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && \
+    apt-get install --yes --no-install-recommends \
+      memcached \
+      libpq5 \
+      ruby3.0 \
+      tzdata && \
+    apt-get clean && \
+    rm -Rf /usr/share/doc && rm -Rf /usr/share/man && \
+    rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder /opt/concertim/opt /opt/concertim/opt
+COPY --from=builder /etc/memcached.conf /etc/memcached.conf
+COPY --from=builder /opt/concertim/etc /opt/concertim/etc
+
+# Install gems. FSR copying them from builder doesn't seem to work.  Probably
+# because I wasn't handling native extensions correctly.  Ideally the following
+# line could be used instead.
+#   COPY --from=builder /var/lib/gems /var/lib/gems
+RUN apt-get update && \
+    apt-get install --yes --no-install-recommends \
+      autoconf \
+      bison \
+      build-essential \
+      libpq-dev \
+      ruby3.0-dev && \
+    cd /opt/concertim/opt/ct-visualisation-app/core && \
+    ./bin/bundle install && \
+    apt-get remove --yes \
+      autoconf \
+      bison \
+      build-essential \
+      libpq-dev \
+      ruby3.0-dev && \
+    apt-get autoremove --yes && \
+    apt-get clean && \
+    rm -Rf /usr/share/doc && rm -Rf /usr/share/man && \
+    rm -rf /var/lib/apt/lists/*
+
+
+ENV RAILS_LOG_TO_STDOUT=true
 
 COPY ./docker/visualisation/entrypoint.sh /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
