--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -57,17 +57,20 @@
         cmd: |
           sudo -u {{app_user}} /bin/bash -c 'EDITOR=cat ./bin/rails credentials:edit'
 
-# Installs database config for accessing DB on a remote host.
-# XXX Would be better to have the config in ct-visualisation-app set the host
-# and we can adjust it here using ansible.builtin.replace
-- name: Install database config
+- name: Adjust database config with host and password
+  vars:
+   # db_password: "{{ lookup('ansible.builtin.file', '/run/secrets/db/password.txt') }}"
+   db_password: db_password
+  ansible.builtin.replace:
+    path: "{{ct_installation_dir}}/ct-visualisation-app/core/config/database.yml"
+    regexp: "{{item.regexp}}"
+    replace: "{{item.replace}}"
+  loop:
+    - regexp: '^(\s*)#\s*host:.*$'
+      replace: '\1host: {{db_host}}'
+    - regexp: '^(\s*)#\s*password:.*$'
+      replace: '\1password: {{db_password}}'
   when: docker_build | bool
-  ansible.builtin.copy:
-    src: database.yml
-    dest: "{{ct_vis_app_core_dir}}/config/"
-    owner: "{{app_user}}"
-    group: "{{app_user}}"
-    mode: "0644"
 
 - name: Setup database
   when: not docker_build | bool
