--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /ansible/roles/*/files/tmp/*
 /ansible/secrets.enc
 /notes/*
+docker/secrets/aws-credentials.yml
+docker/secrets/aws-credentials.yml.enc
+docker/secrets/vault-password.txt
