--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -4,7 +4,7 @@ package_assets_ruby_projects:
   - repo: concertim-ct-visualisation-app
     name: ct-visualisation-app
     # This could be a git tag, git branch or git commit.
-    tag: 0.1.2
+    tag: main
     type: appliance
     subdir: ""
 
@@ -12,6 +12,6 @@ package_assets_golang_projects:
   - repo: concertim-metric-reporting-daemon
     name: ct-metric-reporting-daemon
     # This could be a git tag, git branch or git commit.
-    tag: 0.5.0
+    tag: main
     type: daemon
     subdir: ""
