--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -60,26 +60,7 @@
     - name: Generate encryption keys
       ansible.builtin.shell:
         chdir: "{{ ct_vis_app_core_dir }}"
-        cmd: |
-          sudo -u {{app_user}} /bin/bash -c './bin/rails db:encryption:init'
-        register: encryption_init_output
-
-    - name: Remove unwanted text from encryption output
-      set_fact:
-        encryption_keys: "{{ encryption_init_output.stdout | regex_replace('Add this entry to the credentials of the target environment:', '') }}"
-
-    - name: Add encryption data to credentials
-      ansible.builtin.shell:
-        chdir: "{{ ct_vis_app_core_dir }}"
-        cmd:
-          expect -c '
-            spawn EDITOR=nano ./bin/rails credentials:edit
-            expect "\n" { send "\x04" }
-            expect "\n" { send "{{ encryption_keys }}\n" }
-            expect "\n" { send "\x0F" }
-            expect "File name to write" { send "\n" }
-            expect "Ctrl+X" { send "\x18" }
-          '
+        cmd: sudo -u {{app_user}} /bin/bash -c './bin/rails encryption:generate'
 
 - name: Adjust database config with host and password
   vars:
