--- a/ansible/roles/ct-visualisation-app/templates/ct-visualisation-app.service
+++ b/ansible/roles/ct-visualisation-app/templates/ct-visualisation-app.service
@@ -3,7 +3,7 @@ Description=CT Visualisation App - Web app providing visualisation of metrics
 
 [Service]
 Type=exec
-ExecStart={{ct_vis_app_core_dir}}/bin/rails server -p 7000 -b 0.0.0.0 -e production
+ExecStart={{ct_vis_app_path}}/bin/rails server -p 7000 -b 0.0.0.0 -e production
 TimeoutSec=10sec
 StandardOutput=append:{{ct_vis_app_log_file}}
 StandardError=append:{{ct_vis_app_log_file}}
